--- a/main/templates/detail.html
+++ b/main/templates/detail.html
@@ -6,24 +6,24 @@
     <title>상세 내용</title>
   </head>
   <body>
-    {{my_OB.id}}번째 글입니다.
+    {{my_Ob.id}}번째 글입니다.
 
     <br />
 
-    제목: {{my_OB.title}}
+    제목: {{my_Ob.title}}
 
     <br />
 
-    내용: {{my_OB.content}}
+    내용: {{my_Ob.content}}
 
     <br />
 
-    생성시간: {{my_OB.update_at|date:"Y-m-d"}}
+    생성시간: {{my_Ob.update_at|date:"Y-m-d"}}
 
-    <a href="{% url 'update' my_OB.id %}">
+    <a href="{% url 'update' my_Ob.id %}">
       <button>수정</button>
     </a>
-    <a href="{% url 'delete' my_OB.id %}">
+    <a href="{% url 'delete' my_Ob.id %}">
       <button>삭제</button>
     </a>
   </body>
