--- a/main/templates/detail.html
+++ b/main/templates/detail.html
@@ -14,6 +14,10 @@
 
     <br />
 
+    사진: {{my_Ob.image}}
+
+    <br />
+
     내용: {{my_Ob.content}}
 
     <br />
@@ -23,6 +27,7 @@
     <a href="{% url 'update' my_Ob.id %}">
       <button>수정</button>
     </a>
+
     <a href="{% url 'delete' my_Ob.id %}">
       <button>삭제</button>
     </a>
