--- a/main/templates/index.html
+++ b/main/templates/index.html
@@ -13,6 +13,31 @@
     />
   </head>
   <body>
+    <!-- if문을 사용해서 로그인 버튼, 로그아웃 버튼 상황에 따라 변화시켜주기 -->
+
+    {% if user.is_authenticated %}
+
+    <a href="{% url 'logout' %}">
+      <button>로그아웃</button>
+    </a>
+
+    안녕하세요! {{user}}님!
+    <!-- 로그인 되지 않았으면 회원가입과 로그인 창 뜨게 해주기 -->
+
+    {% else %}
+
+    <!-- 회원가입 버튼 -->
+    <a href="{% url 'signup' %}">
+      <button>회원가입</button>
+    </a>
+
+    <!-- 로그인 버튼 -->
+    <a href="{% url 'login' %}">
+      <button>로그인</button>
+    </a>
+
+    {% endif %}
+    <br />
     <!-- 게시물 추가 -->
     <div class="make_Ob">
       <a href="{% url 'create' %}">
@@ -30,6 +55,7 @@
   특정한 객체번호에 해당되는 페이지만 나올 수 있게 링크를 걸어준다  -->
     <a href="{% url 'detail' Ob.id %}">
       <div class="all_Ob">
+        <p>{{jss.author}}</p>
         <p>{{Ob.title}}</p>
         <p>{{Ob.content}}</p>
         <p>{{Ob.update_at|date:"Y-m-d"}}</p>
