--- a/accounts/static/css/signup.css
+++ b/accounts/static/css/signup.css
@@ -1,5 +1,6 @@
 /*custom css stylesheet*/
 /* Credit to bootsnipp.com for the css for the color graph */
+
 .colorgraph {
     height: 5px;
     border-top: 0;
@@ -13,16 +14,15 @@
   
   
   /* Global stylesheet */
-  
-  @import url('http://fonts.googleapis.com/css?family=Lato:300,400,700,300italic,400italic,700italic');   /* Google Lato Web Font */
-  
+  @import url('https://fonts.googleapis.com/css?family=Noto+Sans+KR&display=swap');
+    
   /* Global Text Styles */
   
   body,
   html {
       width: 100%;
       height: 100%;
-      font-family: "Lato", "Helvetica Neue", Helvetica, Arial, sans-serif;
+      font-family: 'Noto Sans KR', sans-serif;
       font-weight: 400;
   }
   
@@ -88,22 +88,6 @@
       background-attachment: fixed;
   }
   
-  footer {
-      padding: 10px 0;
-      background-color: #f8f8f8;
-      position: relative;
-      bottom: 0;
-      width: 100%;
-  }
-  
-  p.copyright {
-      margin: 15px 0 0;
-  }
-  
-  .colorgraph-footer {
-      position: fixed;
-  }
-  
   .form-row {
       margin-top: 15px;
       margin-bottom: 15px;
@@ -111,11 +95,6 @@
   
   @media (max-width:768px) {
       .btn {
-          margin-bottom: 10px;
-      }
-  
-      footer, .colorgraph-footer {
-          position: static;
-      }
+          margin-bottom: 10px;}
   }
   
