--- a/accounts/templates/signup.html
+++ b/accounts/templates/signup.html
@@ -24,7 +24,7 @@
               <hr class="colorgraph">
               <!-- username -->
               <div class="form-group">
-                <input type="text" name="display_name" id="display_name" class="form-control input-lg" placeholder="Username" tabindex="3">
+                <input type="text" name="username" id="username" class="form-control input-lg" placeholder="Username" tabindex="3">
               </div>
               <!-- email -->
               
@@ -38,15 +38,12 @@
                 <!-- 2차 비밀번호 -->
                 <div class="col-xs-12 col-sm-6 col-md-6">
                   <div class="form-group">
-                    <input type="password" name="password_confirmation" id="password_confirmation" class="form-control input-lg" placeholder="Confirm Password" tabindex="6">
+                    <input type="password" name="password2" id="password2" class="form-control input-lg" placeholder="Confirm Password" tabindex="6">
                   </div>
                 </div>
               </div>
               <!--  약관 동의 -->
              
-      <div class="regi_form">
-        {{register_form.as_p}}
-      </div>
       <!-- 회원가입 버튼 -->
       <div class="modal-footer">
       <button type="submit" class="btn btn-primary" data-dismiss="modal"> 가입하기 </button>
