--- a/accounts/templates/signup.html
+++ b/accounts/templates/signup.html
@@ -13,6 +13,7 @@
     <title>회원가입</title>
   </head>
   <body>
+    <script type="text/javascript" src="signup.js"></script>
     <form method="POST" action="{% url 'signup' %}">
       {% csrf_token %}
       <!-- 회원가입 입력창 -->
@@ -27,7 +28,9 @@
                 <input type="text" name="username" id="username" class="form-control input-lg" placeholder="Username" tabindex="3">
               </div>
               <!-- email -->
-              
+              <div class="form-group">
+                <input type="text" name="username" id="email" class="form-control input-lg" placeholder="e-mail" tabindex="4">
+              </div>
               <!-- 비밀번호 -->
               <div class="row">
                 <div class="col-xs-12 col-sm-6 col-md-6">
