--- a/main/templates/main2.html
+++ b/main/templates/main2.html
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
+{% load static %}
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel= "stylesheet" href="{% static 'css/main2.css' %}">
     <title>main</title>
 </head>
 <body style="background-color: #A9D0F5;">
