--- a/main/templates/main2.html
+++ b/main/templates/main2.html
@@ -8,8 +8,8 @@
     <title>main</title>
 </head>
 <body style="background-color: #A9D0F5;">
-    <h1>감성글</h1>
-    <div class="btn-area">
+    <div style="margin: auto;">감성글</div>
+    <div class="btn-area" style="margin: auto;">
         <button id="mainbtn" type="submit">로그인 하러 가기</button>
     </div>
 </body>
