--- a/main/templates/create.html
+++ b/main/templates/create.html
@@ -7,7 +7,7 @@
   </head>
   <body>
     <!-- form.py 모델 생성 -->
-    <form method="POST" action="" enctype="multipart/form-data">
+    <form method='post' action='' enctype="multipart/form-data">
       {% csrf_token %}
       <!-- views.py에서 만들어준 폼 정의 가져오기 -->
       {{Ob_form.as_p}}
