--- a/main/templates/main2.html
+++ b/main/templates/main2.html
@@ -8,11 +8,22 @@
     <title>main</title>
   </head>
   <body style="background-color: #a9d0f5;">
-    <div style="margin: auto;">감성글</div>
+    <div class="main-div">
+        <div class="main-container">
+            something
+        </div>
+    </div>
+
     <div class="btn-area" style="margin: auto;">
       <a href="{% url 'login' %}">
         <button id="mainbtn" type="submit">로그인 하러 가기</button>
       </a>
     </div>
+    
+    <div class="btn-area" style="margin: auto;">
+        <a href="{% url 'signup' %}">
+          <button id="mainbtn" type="submit">회원가입 하러 가기</button>
+        </a>
+      </div>
   </body>
 </html>
