--- a/main/templates/create.html
+++ b/main/templates/create.html
@@ -1,17 +1,133 @@
 <!DOCTYPE html>
-<html lang="ko">
+<html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>글 작성하기</title>
-  </head>0
+    <title>ob 추가 | Django 사이트 관리</title>
+    <link rel="stylesheet" type="text/css" href="/static/admin/css/base.css" />
+
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="/static/admin/css/nav_sidebar.css"
+    />
+    <script src="/static/admin/js/nav_sidebar.js" defer></script>
+
+    <link rel="stylesheet" type="text/css" href="/static/admin/css/forms.css" />
+
+    <script src="/admin/jsi18n/"></script>
+    <script src="/static/admin/js/vendor/jquery/jquery.js"></script>
+    <script src="/static/admin/js/jquery.init.js"></script>
+    <script src="/static/admin/js/core.js"></script>
+    <script src="/static/admin/js/admin/RelatedObjectLookups.js"></script>
+    <script src="/static/admin/js/actions.js"></script>
+    <script src="/static/admin/js/urlify.js"></script>
+    <script src="/static/admin/js/prepopulate.js"></script>
+    <script src="/static/admin/js/vendor/xregexp/xregexp.js"></script>
+
+    <meta
+      name="viewport"
+      content="user-scalable=no, width=device-width, initial-scale=1.0, maximum-scale=1.0"
+    />
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="/static/admin/css/responsive.css"
+    />
+
+    <meta name="robots" content="NONE,NOARCHIVE" />
+  </head>
+
+
+
   <body>
-    <!-- form.py 모델 생성 -->
-    <form method='post' action='' enctype="multipart/form-data">
-      {% csrf_token %}
-      <!-- views.py에서 만들어준 폼 정의 가져오기 -->
-      {{Ob_form.as_p}}
-      <input type="submit" value="확인" />
-    </form>
+
+    <br>
+    <br>
+    <fieldset class="module aligned">
+      <div class="form-row field-title">
+      <form method='post' action="" enctype="multipart/form-data">
+        {% csrf_token %}
+
+          <div>
+            <label class="required" for="id_title">Title:</label>
+
+            <input
+              type="text"
+              name="title"
+              class="vTextField"
+              maxlength="50"
+              required
+              id="id_title"
+            />
+          </div>
+        </div>
+
+        <div class="form-row field-image">
+          <div>
+            <label class="required" for="id_image">Image:</label>
+
+            <input
+              type="file"
+              name="image"
+              accept="image/*"
+              required
+              id="id_image"
+            />
+          </div>
+        </div>
+
+        <div class="form-row field-content">
+          <div>
+            <label class="required" for="id_content">Content:</label>
+
+            <textarea
+              name="content"
+              cols="40"
+              rows="10"
+              class="vLargeTextField"
+              required
+              id="id_content"
+            ></textarea>
+          </div>
+        </div>
+          </fieldset>
+
+        <div class="submit-row">
+        <button class="btn btn-secondary btn-lg btn-block" type="submit">등록 완료하기</button>
+        
+        </div>
+
+      </form>
+
+  
+  
+      <script id="django-admin-form-add-constants"
+              src="/static/admin/js/change_form.js"
+              
+                  data-model-name="ob"
+              
+              async>
+      </script>
+  
+  
+  
+  
+  <script id="django-admin-prepopulated-fields-constants"
+          src="/static/admin/js/prepopulate_init.js"
+          data-prepopulated-fields="[]">
+  </script>
+  
+  
+  </div>
+  </form></div>
+  
+            
+            <br class="clear">
+          </div>
+          <!-- END Content -->
+          <div id="footer"></div>
+        </div>
+      </div>
+  </div>
+  <!-- END Container -->
   </body>
 </html>
